@@ -15,6 +15,7 @@ mlUnit 1.8.0 (in development)
     tests (and test-level fixtures), and includes it in the jUnit report.
   - Execution time is now given for each test case in the jUnit report.
   - Compatibility with MATLAB R2018b.
+  - Compatibility with MATLAB R2007b. Scrapped R2006b support.
   - Console output now produces space above new items, instead of below them.
 
   - Fix: Guard mlUnit parameters against `clear` being called in user's
